# gre-mnemonics-app

./: .gitignore  README.md  main.py  pyproject.toml
